# test-erp-k2

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  task.md  tsconfig.json
alembic/: env.py
alembic/versions/: e81906ae1624_initial_migration.py
deploy/: Dockerfile  entrypoint.sh
src/: __init__.py  main.py
src/apps/: __init__.py
src/apps/clients/: __init__.py  models.py  provider.py  repositories.py  routers.py  schemas.py  services.py
src/apps/frontend/: __init__.py  routers.py
src/apps/frontend/static/css/: style.css
src/apps/frontend/static/js/: script.js
src/apps/frontend/static/ts/: script.ts
src/apps/frontend/templates/: index.html
src/apps/orders/: __init__.py  models.py  provider.py  repositories.py  routers.py  schemas.py  services.py
src/apps/products/: __init__.py  models.py  provider.py  repositories.py  routers.py  schemas.py  services.py
src/core/: __init__.py  config.py  exceptions.py  logger.py
src/core/models/: __init__.py  base.py
src/infrastructure/: __init__.py  database.py  provider.py
src/setup/: __init__.py  app.py  ioc.py  lifespan.py
tests/: __init__.py  conftest.py  test_main.py
tests/api/: test_clients.py  test_orders.py  test_products.py
tests/fixtures/: __init__.py  clients.py  orders.py  products.py
